mobile header and stories completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
     <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet" />
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="styles/reset.css" />
@@ -18,7 +23,87 @@
     <link rel="stylesheet" href="styles/media.css" />
   </head>
   <body>
-    <!-- scripts -->
-    <script src="scripts/script.js"></script>
+    <header>
+      <nav>
+        <ion-icon name="logo-instagram"></ion-icon>
+        <img src="images/logo.png" alt="logo instagram" />
+        <ion-icon name="paper-plane-outline"></ion-icon>
+      </nav>
+    </header>
+    <main>
+      <section class="stories">
+        <div class="story">
+          <div>
+            <img src="images/stories_background.png" alt="story background" />
+            <img src="images/large/9gag.png" alt="9gag" class="user" />
+          </div>
+          <p>9gag</p>
+        </div>
+
+        <div class="story">
+          <div>
+            <img src="images/stories_background.png" alt="story background" />
+            <img src="images/large/meowed.png" alt="meowed" class="user" />
+          </div>
+          <p>meowed</p>
+        </div>
+
+        <div class="story">
+          <div>
+            <img src="images/stories_background.png" alt="story background" />
+            <img src="images/large/barked.png" alt="barked" class="user" />
+          </div>
+          <p>barked</p>
+        </div>
+
+        <div class="story">
+          <div>
+            <img src="images/stories_background.png" alt="story background" />
+            <img
+              src="images/large/nathanwpylestrangeplanet.png"
+              alt="nathanwpylestrangeplanet"
+              class="user" />
+          </div>
+          <p>nathanwpylestrangeplanet</p>
+        </div>
+
+        <div class="story">
+          <div>
+            <img src="images/stories_background.png" alt="story background" />
+            <img src="images/large/wawawiwacomicsa.png" alt="wawawiwacomicsa" class="user" />
+          </div>
+          <p>wawawiwacomicsa</p>
+        </div>
+
+        <div class="story">
+          <div>
+            <img src="images/stories_background.png" alt="story background" />
+            <img src="images/large/filomoderna.png" alt="filomoderna" class="user" />
+          </div>
+          <p>filomoderna</p>
+        </div>
+
+        <div class="story">
+          <div>
+            <img src="images/stories_background.png" alt="story background" />
+            <img src="images/large/memeriagourmet.png" alt="memeriagourmet" class="user" />
+          </div>
+          <p>memeriagourmet</p>
+        </div>
+      </section>
+      <section class="posts"></section>
+    </main>
+
+    <footer>
+      <ion-icon name="home"></ion-icon>
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-icon name="heart-outline"></ion-icon>
+      <ion-icon name="person-outline"></ion-icon>
+    </footer>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
