--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </div>
 
         <div class="suggestions-header">
-          <p>Suggestões para você</p>
+          <p>Sugestões para você</p>
           <button>Ver tudo</button>
         </div>
 
