--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <img src="images/small/razoesparaacreditar.png" alt="razoesparaacreditar" />
             <div>
               <strong>razoesparaacreditar</strong>
-              <p>Segue você</p>
+              <p>Novo no Instagram</p>
             </div>
           </div>
           <button>Seguir</button>
